# snake-tui

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/game/: board.rs  direction.rs  food.rs  mod.rs  snake.rs
src/ui/: render.rs
