[package]
name = "ratatui-snake"
version = "0.1.0"
edition = "2021"
description = "A classic Snake game for the terminal, built in Rust with Ratatui."
license = "MIT"
repository = "https://github.com/axelfrache/ratatui-snake"
readme = "README.md"
keywords = ["snake", "tui", "game", "terminal", "ratatui"]
categories = ["games", "command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0.101"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
